# BioMedical_KnowledgeGraph_ontology_MCP

neo4j-neptune-mcp-platform/: .config.kiro  .env.example  design.md  pyproject.toml  requirements.md  tasks.md
neo4j-neptune-mcp-platform/docs/: ARCHITECTURE.md  COMPLETION_SUMMARY.md  DEPLOYMENT_VALIDATION.md  FINAL_SUMMARY.md  IMPLEMENTATION_PROGRESS.md  ONTOSPHERE_INTEGRATION.md  ONTOSPHERE_QUICKSTART.md  POC_OVERVIEW.md  PROJECT_COMPLETE.md  TASK_11_COMPLETION.md  TASK_12_1_COMPLETION.md  TASK_14_1_COMPLETION.md  TASK_14_4_COMPLETION.md  TASK_15_COMPLETION.md  TASK_17_COMPLETION.md  TASK_7_COMPLETION.md  TASK_8_5_COMPLETION.md  TECH_STACK.md
neo4j-neptune-mcp-platform/docs/ontology/: biomedkg-data.ttl  clinical.ttl  commercial.ttl  foundation.ttl  governance.ttl  medical_affairs.ttl  patient.ttl  supply_quality.ttl
neo4j-neptune-mcp-platform/relationships/: batch_produced_for_drug.csv  cell_type_found_in_anatomy.csv  cluster_has_summary.csv  disease_affects_anatomy.csv  disease_has_phenotype.csv  disease_involves_cell_type.csv  drug_manufactured_at.csv  entity_associated_with_disease.csv  exposure_affects_gene.csv  exposure_increases_risk_disease.csv  gene_has_molecular_function.csv  gene_involved_in_biological_process.csv  gene_participates_in_pathway.csv  node_belongs_to_cluster.csv  pathway_involves_biological_process.csv  patient_enrolled_in_trial.csv  patient_has_outcome.csv  phenotype_associated_with_gene.csv  policy_governs_entity.csv  protein_expressed_in_anatomy.csv  protein_has_molecular_function.csv  protein_involved_in_biological_process.csv  protein_involved_in_pathway.csv  researcher_advises_board.csv  submission_for_drug.csv
neo4j-neptune-mcp-platform/sampledata/nodes/: advisory_boards.csv  anatomy.csv  biological_processes.csv  cell_types.csv  cluster_summaries.csv  clusters.csv  compliance_records.csv  data_governance_policies.csv  drug_batches.csv  entities.csv  exposures.csv  external_mappings.csv  manufacturing_sites.csv  medical_information_requests.csv  molecular_functions.csv  pathways.csv  patient_outcomes.csv  patient_reported_outcomes.csv  patients.csv  phenotypes.csv  quality_events.csv  regulatory_submissions.csv
neo4j-neptune-mcp-platform/scripts/: validate_ontosphere_integration.py
neo4j-neptune-mcp-platform/src/biomedical_kg_mcp/: __init__.py  platform.py
neo4j-neptune-mcp-platform/src/biomedical_kg_mcp/agent/: biomedical_agent.py  cli.py  system_prompt.py
neo4j-neptune-mcp-platform/src/biomedical_kg_mcp/config/: __init__.py  settings.py
neo4j-neptune-mcp-platform/src/biomedical_kg_mcp/mcp_servers/: __init__.py  base.py  graph_sync_server.py  lakehouse_server.py  neo4j_aura_server.py  neptune_server.py  ontosphere_bridge.py  pggraph_server.py
neo4j-neptune-mcp-platform/src/biomedical_kg_mcp/models/: __init__.py  audit.py  node_schemas.py  relationship_schemas.py  sync.py  validation.py
neo4j-neptune-mcp-platform/src/biomedical_kg_mcp/services/: __init__.py  (+22 more)
(+18 files in other folders)
